--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-    "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "aecy/laraved",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Reworking my portfolio coded in NextJS to Laravel",
     "keywords": [
-        "laravel",
-        "framework"
+        "maved",
+        "portfolio"
     ],
     "license": "MIT",
     "require": {
@@ -22,7 +21,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "rector/rector": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -55,6 +55,11 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"npm run dev\" --names='server,queue,vite'"
+        ],
+        "refactor": "rector",
+        "test:refactor": "rector --dry-run",
+        "test": [
+            "@test:refactor"
         ]
     },
     "extra": {
