--- a/composer.json
+++ b/composer.json
@@ -56,9 +56,12 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"npm run dev\" --names='server,queue,vite'"
         ],
+        "lint": "pint",
         "refactor": "rector",
+        "test:lint": "pint --test",
         "test:refactor": "rector --dry-run",
         "test": [
+            "@test:lint",
             "@test:refactor"
         ]
     },
