--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
@@ -60,9 +61,14 @@
         "refactor": "rector",
         "test:lint": "pint --test",
         "test:refactor": "rector --dry-run",
+        "test:types": "phpstan analyse",
+        "test:unit": "pest --parallel",
+        "test:arch": "pest --filter=arch",
         "test": [
             "@test:lint",
-            "@test:refactor"
+            "@test:refactor",
+            "@test:types",
+            "@test:unit"
         ]
     },
     "extra": {
