ci: fixes testing

--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "test": [
             "@test:lint",
             "@test:refactor",
+            "@test:arch",
             "@test:unit"
         ]
     },
