--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aecy/laraved",
     "type": "project",
-    "description": "Reworking my portfolio coded in NextJS to Laravel",
+    "description": "Reworking my NextJS portfolio to Laravel 11",
     "keywords": [
         "maved",
         "portfolio"
@@ -9,9 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.2",
+        "filament/filament": "^3.2.133",
         "laravel/framework": "^11.38.2",
-        "laravel/tinker": "^2.10"
+        "laravel/tinker": "^2.10",
+        "spatie/laravel-markdown": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24.1",
