--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "shiki": "^1.27.2"
     }
 }
