--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,8 @@
         "test:lint": "pint --test",
         "test:refactor": "rector --dry-run",
         "test:types": "phpstan analyse",
-        "test:unit": "pest --parallel",
         "test:arch": "pest --filter=arch",
+        "test:unit": "pest --parallel --coverage --min=99",
         "test": [
             "@test:lint",
             "@test:refactor",
