--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.3]
+        php: [8.4]
 
     name: Tests
 
@@ -19,10 +19,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache Dependencies
+      - name: Cache Dependencies PHP
+        id: php-cache
         uses: actions/cache@v4
         with:
-          path: ~/.composer/cache/files
+          path: vendor
           key: dependencies-php-composer-${{ hashFiles('composer.lock') }}
 
       - name: Setup PHP
@@ -36,7 +37,7 @@ jobs:
       - name: Set up Node & NPM
         uses: actions/setup-node@v2
         with:
-          node-version: '18.x'
+          node-version: '22.x'
 
       - name: Setup Problem Matches
         run: |
@@ -44,6 +45,7 @@ jobs:
           echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
       - name: Install PHP dependencies
+        if: steps.php-cache.outputs.cache-hit != 'true'
         run: composer install --no-interaction --no-progress --ansi
 
       - name: Get NPM cache directory
